perf(backend): replace 5 unbounded findAll() callsites with bounded queries (#GAP-432)
Wave 41 Bucket C — refactor 3 services flagged in Wave 40 Performance
audit (PR #972) so cold-cache + post-launch growth no longer trigger
full-table scans.

AnalyticsService (3 callsites: lines 57, 58, 129):
  - getDashboardStats now uses DB-side count + group-by + sum:
    countByDeletedFalse, countInstancesByStatus,
    countByDeletedFalseAndCreatedAtAfter,
    countSubscriptionsByTier, sumActiveMrr, sumActiveRevenueByTier.
  - getRevenueReport now uses range-filtered findActiveInPeriod
    + sumActiveMrr + sumCancelledRevenue instead of findAll +
    in-memory filter.

PaymentService.getAllPayments (line 121):
  - Now requires Pageable; returns Page<PaymentResponse>.
  - Repo gains findAllNotDeleted(Pageable) + findByStatusNotDeleted
    with DB-side soft-delete filter pushed into WHERE.
  - Controller exposes page/size query params (default 50, capped 200).

InstanceService.listAllInstances (line 337):
  - Now requires Pageable; returns Page<InstanceResponse>.
  - Repo gains findByDeletedFalse(Pageable) — replaces client-side
    isDeleted filter.
  - Controller exposes page/size query params (default 50, capped 200).

API contract change: GET /api/platform/instances and
GET /api/platform/payments now return Page<...> envelope
({content, totalElements, ...}) instead of bare array.
Admin frontends consuming these endpoints may need an adapter.

Tests: 29/29 green with mvn -pl kitehub-subscription,kitehub-admin
verify -P strict-warnings. New tests:
  - PaymentServiceBoundedQueryTest (3 tests)
  - InstanceServiceBoundedListTest (2 tests)
  - AnalyticsServiceTest rewritten with verify(repo, never()).findAll()
    invariant
  - AnalyticsServiceCachingTest updated to bounded query path
  - InstanceApiContractTest updated to assert Page envelope schema

GAP-432 status: PARTIAL — code refactor + tests DONE; JMH benchmark
+ Performance audit re-score deferred to Wave 41 closure audit 